@@ -6,6 +6,7 @@ requires 'File::Spec::Functions';
 requires 'File::Temp';
 requires 'Mojolicious'     => '7.15';
 requires 'Scalar::Util';
+requires 'SQL::Abstract'   => '1.81';
 requires 'URI'             => '1.69';
 requires 'URI::db'         => '0.15';
 requires 'URI::file'       => '4.21';
