@@ -1,1 +1,4 @@
-{sqlite => 'test.db', secrets => ['s3cret']};
+{
+  sqlite  => 'test.db',
+  secrets => ['s3cret'],
+}
